vpc/vpc.tf
##########
# VPC
##########
resource "aws_vpc" "sjlee-terraform-aws-vpc" {
  cidr_block = "10.0.0.0/16"

  tags = {
    Name = "${var.vpc_name}"
  }
}
